--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Team Generator</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Team Generator</h1>
-    </header>
-    <main>
-      <div id="team1"></div>
-      <div id="team2"></div>
-      <button id="randomize">Randomize</button>
-    </main>
-    <script src="script.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>RON Team Generator</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Team Generator</h1>
+  </header>
+  <main>
+    <div id="team1"></div>
+    <div id="team2"></div>
+    <button id="randomize">Randomize</button>
+  </main>
+
+  <script src="./script.js"></script>
+</body>
 </html>
